--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -3,23 +3,23 @@
         <h2 class="title">Галерея</h2>
         <div>
             <ul class="gallery__list">
-                <li class="gallery__list-item">
+                <li class="gallery__item">
                     <a class="gallery__link" href="portfolio.html">
-                        <img class="gallery__list-img" src="./images/weaving.jpg" alt="Гобелени">
+                        <img class="gallery__img" src="./images/weaving.jpg" alt="Гобелени">
+                        <p class="gallery__list-discription">Ткацтво</p>
                     </a>
-                    <p class="gallery__list-discription">Ткацтво</p>
                 </li>
-                <li class="gallery__list-item">
+                <li class="gallery__item">
                     <a class="gallery__link" href="portfolio.html">
-                        <img class="gallery__list-img" src="./images/painting.jpg" alt="Живопис">
+                        <img class="gallery__img" src="./images/painting.jpg" alt="Живопис">
+                        <p class="gallery__list-discription">Живопис</p>
                     </a>
-                    <p class="gallery__list-discription">Живопис</p>
                 </li>
-                <li class="gallery__list-item">
+                <li class="gallery__item">
                     <a class="gallery__link" href="portfolio.html">
-                        <img class="gallery__list-img" src="./images/Hutsul-ceramics.jpg" alt="Косівський розпис">
+                        <img class="gallery__img" src="./images/Hutsul-ceramics.jpg" alt="Косівський розпис">
+                        <p class="gallery__list-discription">Косівський розпис</p>
                     </a>
-                    <p class="gallery__list-discription">Косівський розпис</p>
                 </li>
             </ul>
         </div>
