--- a/src/sass/layouts/_gallery.scss
+++ b/src/sass/layouts/_gallery.scss
@@ -1,83 +1,83 @@
-.gallery__list {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.gallery {
+    &__list {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    &__item {
+        position: relative;
+        border-radius: 10px;
+        transition: transform 0.3s ease;
+        transition: 500ms  var(--timing-function);
 
+        &:hover {
+            transform: scale(1.03); 
+            box-shadow: 0px 0px 20px 2px rgba(243,188,119,1);
+        }
+    }
+    &__img {
+        border-radius: 10px;
+        object-fit:cover;
+    }
+    &__list-discription {
+        position: absolute;
+        bottom: 4px;
+        left: 0;
+        width: 100%;
+        height: auto;
+        margin: 0;
+        z-index: 1;
+        padding: 5px 10px;
+        border-bottom-left-radius: 9px;
+        border-bottom-right-radius: 9px;
+
+        cursor: pointer;
+        font-size: 24px;
+        font-weight: 500;
+        text-align: center;
+        background-color: rgba(0, 0, 0, 0.8);
+    }
 }
-
-.gallery__list-img {
-    border-radius: 10px;
-    object-fit:cover;
- }
-
- .gallery__list .gallery__list-item {
-    transition: transform 0.3s ease;
-    transition: 500ms  var(--timing-function);
-}
-
-.gallery__list .gallery__list-item:hover {
-    transform: scale(1.03); 
-}
-
-.gallery__list-img:hover {
-    box-shadow: 0px 0px 20px 2px rgba(243,188,119,1);
-}
-
-.gallery__list-item {
-    position: relative;
-  }
   
-  .gallery__list-discription {
-    border-bottom-left-radius: 9px;
-    border-bottom-right-radius: 9px;
-    font-size: 24px;
-    font-weight: 700;
-    text-align: center;
-    position: absolute;
-    bottom: 4px;
-    left: 0;
-    width: 100%;
-    height: auto;
-    background-color: rgba(0, 0, 0, 0.8);
-    padding: 5px 10px;
-    margin: 0;
-    z-index: 1;
-  }
-
 @media screen and (min-width:320px) and (max-width:768px) {
-    .gallery__list {
-        flex-direction: column;
-    }
-
-    .gallery__list-item {
-        margin-bottom: 30px;
-    }
-
-    .gallery__list-img {
-        width: 290px;
-        height: 290px;
+    .gallery {
+        &__list {
+            flex-direction: column;
+        }
+        &__item {
+            margin-bottom: 30px;
+        }
+        &__img {
+            width: 290px;
+            height: 290px;
+        }
+        &__list-discription {
+            font-size: 18px;
+        }
     }
 }
 
 @media screen and (min-width:768px) {
-    .gallery__list {
-        flex-direction: row;
-        justify-content: space-between;
-    }
-
-    .gallery__list-img {
-        width: 210px;
-        height: 210px;
+    .gallery{
+        &__list {
+            flex-direction: row;
+            justify-content: space-between;
+        }
+        &__img {
+            width: 210px;
+            height: 210px;
+        }
     }
 }
 
 @media screen and (min-width:1200px) {
-    .gallery__list {
-        justify-content: space-between;
-    }
-
-    .gallery__list-img {
-        width: 360px;
-        height: 360px;
+    .gallery {
+        &__list {
+            justify-content: space-between;
+        }
+        &__img {
+            width: 360px;
+            height: 360px;
+        }
     }
 }
