--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -10,6 +10,38 @@
                     <use href="./images/symbol-defs.svg#icon-symbol-right"></use>
                 </svg>
             </div>
+
+            <button 
+                type="button" 
+                class="menu-button" 
+                aria-expanded="false"
+                aria-controls="menu-container"
+                data-menu-button
+            >
+                <svg 
+                    width="20" 
+                    height="20"
+                    aria-label="Перемикач мобільного меню">
+                    
+                        <use class="icon-cross" href="./images/symbol-defs.svg#icon-cross"></use>
+                        <use class="icon-menu" href="./images/symbol-defs.svg#icon-menu"></use>
+                </svg>
+            </button>
+
+            <div class="menu-container" id="menu-container" dara-menu>
+                <ul class="menu-container__list">
+                    <li class="menu-container__item">
+                        <a class="menu-container__link" href="./index.html">Головна</a>
+                    </li>
+                    <li class="menu-container__item">
+                        <a class="menu-container__link" href="./portfolio.html">Галерея</a>
+                    </li>
+                    <li class="menu-container__item">
+                        <a class="menu-container__link" href="./about.html">Про мене</a>
+                    </li>
+                </ul>
+            </div>
+
             <ul class="header__nav-list">
                 <li class="header__nav-item">
                     <a class="header__link" href="./index.html">Головна</a>
