--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -1,31 +1,33 @@
 .header {
+    position: relative;
     background-color: var(--secondary-bg-color);
     padding: 30px 0;
 
-    &__navigation {
+    .header__navigation {
+       
         display: flex;
         flex-direction: column;
         align-items: center;
     }
 
-    &__wrapper {
+    .header__wrapper {
         display: flex;
         align-items: center;
     }
 
-    &__svg {
+    .header__svg {
         margin: 0 20px;
         width: 40px;
         height: 40px;
     }
 
-    &__nav-list {
+    .header__nav-list {
         display: flex;
         align-items: center;
         margin-top: 20px;
     }
 
-    &__link {
+    .header__link {
         border-radius: 40px;
         padding: 12px 18px;
         display: inline-block;
@@ -48,25 +50,25 @@
 
 @media screen and (min-width:320px) and (max-width:767px) {
     .header {
-        &__svg {
+        .header__svg {
             margin: 0 5px;
             width: 30px;
             height: 30px;
         }
 
-        &__nav-list {
-            display: flex;
+        .header__nav-list {
+            display: none;
             flex-direction: column;
             align-items: center;
             margin: 0;
             margin-top: 40px;
         }
 
-        &__link {
+        .header__link {
             font-size: 20px;
         }
 
-        &__nav-list li:not(:last-child) {
+        .header__nav-list li:not(:last-child) {
             margin-bottom: 15px;
         }
     }
@@ -77,4 +79,83 @@
     .header__nav-list li:not(:last-child) {
         margin-right: 30px;
     }
+}
+
+.menu-button {
+    display: inline-flex;
+    margin: 0;
+    padding: 10px;
+    border: none;
+    border-radius: 50%;
+    margin-top: 20px;
+    background-color: transparent;
+    cursor: pointer;
+    
+    transition: 500ms  var(--timing-function);
+}
+
+
+// =====================================
+.menu-button  {
+    @media screen and (min-width:767px) {
+        display: none;
+    }
+    
+    &:hover {
+        background-color: var(--main-text-color);
+        fill: var(--background-color);
+    }
+}
+
+.menu-button .icon-cross {
+    display: none;
+}
+
+.menu-button.is-open .icon-cross {
+    display: block;
+}
+
+.menu-button.is-open .icon-menu {
+    display: none;
+}
+
+
+
+    .menu-container {
+        display: none;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        height: 700px;
+        background-color: brown;
+        padding: 20px;
+        text-align: center;
+        font-size: 20px;
+        z-index: 1;
+        transition: 500ms  var(--timing-function);
+    
+        &.is-open {
+            display: block;
+        }
+    }
+
+.menu-container__list .menu-container__item{
+    margin-bottom: 20px;
+}
+
+.menu-container__link {
+    display: inline-block;
+    padding: 10px;
+    border-radius: 40px;
+
+    &:hover,
+        &:focus {
+            background-color: var(--main-text-color);
+            color: var(--background-color);
+            box-shadow: 0px 0px 39px 5px rgba(243,188,119,1);
+            -moz-box-shadow: 0px 0px 39px 5px rgba(243,188,119,1);
+            box-shadow: 0px 0px 39px 5px rgba(243,188,119,1);
+            cursor: pointer;
+        }
 }
